[package]
name = "pgd"
version = "0.0.1"
edition = "2024"
description = "CLI to manage postgres instances for local development"
repository = "https://github.com/MarketTakers/pgd"
license = "MIT"

[dependencies]
bollard = "0.19.4"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
comfy-table = "7.2.1"
futures = "0.3.31"
indicatif = { version = "0.18.3", features = ["improved_unicode"] }
miette = { version = "7.6.0", features = ["fancy"] }
parking_lot = "0.12.5"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
